--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="./src/component  .ts"></script>
+    <script type="module" src="./src/component.ts"></script>
     <title>NutJar Demo</title>
   </head>
   <body>
@@ -21,6 +21,7 @@
       npub="npub1mhcr4j594hsrnen594d7700n2t03n8gdx83zhxzculk6sh9nhwlq7uc226"
       relays="wss://nostr.mom,wss://relay.damus.io"
       mint="https://mint.minibits.cash/Bitcoin"
+      theme="dark"
     ></nutjar-button>
   </body>
 </html>
