fixed click outside

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       npub="npub1mhcr4j594hsrnen594d7700n2t03n8gdx83zhxzculk6sh9nhwlq7uc226"
       relays="wss://nostr.mom,wss://relay.damus.io"
       mint="https://mint.minibits.cash/Bitcoin"
-      theme="dark"
+      theme="light"
     ></nutjar-button>
   </body>
 </html>
